<resources>
    <string name="app_name">Weather Forecast Application</string>
    <string name="titleSplashScreen">Full\nmoon\nnight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="celis">°C</string>
    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="uv">Ultra Violet</string>
    <string name="visible">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="feelsLike">Feels like</string>
    <string name="degree">°</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="notification">Notifictaion</string>
    <string name="pleaseTurnONYourLocation">Please turn on location</string>
    <string name="ok">OK</string>
    <string name="title_activity_location_maps">LocationMaps</string>
    <string name="googleApi">AIzaSyBCZl6hQ8yRjUQcWN_3Ek2INbBqdmXW2PI</string>
    <string name="searchYourLocation">Search your location</string>
    <string name="done">Done</string>
    <string name="favorite">Favorite</string>
    <string name="fav">Favorite</string>
    <string name="add">Add</string>
    <string name="sureToDeleteIt">Are you sure you want to Delete?</string>
    <string name="sureToSave">Are you sure you want to apply changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="windSpeed">Wind speed</string>
    <string name="meterPerSec">m/sec</string>
    <string name="milePerHour">mile/hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="save">"Save "</string>
    <string name="NoInternet">No Internet Connection</string>
    <string name="checkConnection">Check your connection\"</string>
    <string name="alert">Alert</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>
    <string name="screenOverlay">Allow screenoverlay  to permit drawing over other app</string>
    <string name="close_alert">Close</string>
</resources>