<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="550dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_design"
    android:gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/bell_notification"
        app:lottie_repeatCount="10" />

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioGroup
                android:id="@+id/alarmChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/alert"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/alert"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/start_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/startDate" />

            <Button
                android:id="@+id/end_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/endDate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/locationChoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="50dp"
                    android:checked="true"
                    android:text="@string/gps"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/map"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/lightWhite"
        android:gravity="center"
        android:maxWidth="200dp"
        android:text="@string/ok"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearContainer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/lightWhite"
        android:gravity="center"
        android:maxWidth="200dp"
        android:text="@string/cancel"
        android:textColor="@color/removeItem"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>